commiting assignment user story audio playback completed

--- a/src/App.css
+++ b/src/App.css
@@ -27,21 +27,18 @@
   to { transform: rotate(360deg); }
 }
 
-
-tr.paused .ion-md-play,
-tr.playing .ion-md-pause,
+tr.paused .song,
+tr.playing:hover .ion-md-pause,
 tr:hover .ion-md-play
 {
   display: block;
 }
 
-tr .ion-md-play,
 tr .ion-md-pause,
-tr:hover .song-number,
-tr.playing .ion-md-play,
-tr.playing .song-number,
-tr.paused .ion-md-pause,
-tr.paused .song-number
+tr .ion-md-play,
+tr:hover .song,
+tr:hover .paused .song,
+tr.playing .ion-md-play
 {
   display: none;
 }
