--- a/src/App.css
+++ b/src/App.css
@@ -27,18 +27,17 @@
   to { transform: rotate(360deg); }
 }
 
-tr.paused .song,
-tr.playing:hover .ion-md-pause,
-tr:hover .ion-md-play
+tr.inactive .song,
+tr.inactive:hover .ion-md-play
 {
   display: block;
 }
 
-tr .ion-md-pause,
-tr .ion-md-play,
-tr:hover .song,
-tr:hover .paused .song,
-tr.playing .ion-md-play
+tr.inactive .ion-md-pause,
+tr.inactive .ion-md-play,
+tr.item-active .song,
+tr.item-active .ion-md-play,
+tr.inactive:hover .song
 {
   display: none;
 }
