--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,700');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Roboto');
+
 html {
   box-sizing: border-box;
 }
@@ -7,6 +8,7 @@ html {
 }
 .container {
     max-width: 72em;
+    padding: 0;
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: Montserrat;
@@ -15,16 +17,21 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
   padding: 1.75rem 0 0 1.5rem;
   font-size: 2rem;
-  color: #a5a5a5;
+  color: #fff;
   display: inline-block;
 }
+h5 {
+  color: #fff;
+}
 p {
+  font-family: Roboto;
   margin: 0px;
+  color: #fff;
 }
 .App {
   text-align: center;
-  background-color: #fff;
-}
+  background: linear-gradient(#4f4f4f, #272727);
+  }
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
@@ -41,15 +48,34 @@ p {
 .App-intro {
   font-size: large;
 }
+.App img {
+  padding: 0 2em 2em 0;
+  width: 100%;
+}
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+table {
+  border-collapse: collapse;
+  margin: 4em 0 2em;
+  table-layout: fixed;
+  width: 100%;
+}
+td  {
+  color: #fff;
+  padding: .5em;
+  }
+td:first-child { width: 10%; }
+tr { border-bottom: 1px solid #fff; }
+tr:last-child { border: none; }
+tr:hover { background-color: #00B212; }
 tr .song,
 tr.inactive:hover .ion-md-play,
 tr.inactive .ion-md-play
 {
   display: block;
+  color: #fff;
 }
 tr.inactive .ion-md-pause,
 tr.inactive .ion-md-play,
@@ -58,11 +84,16 @@ tr.item-active .ion-md-play,
 tr.inactive:hover .song
 {
   display: none;
+  color: #fff;
 }
 ul {
   min-height: 100vh;
   background-color: #4f4f4f;
 }
+button {
+  background-color: transparent;
+  border: none;
+  }
 .navbar-brand {
   margin-right: 0;
 }
@@ -81,11 +112,29 @@ ul {
 header {
   background-color: #4f4f4f;
 }
-.landing [class^="col"] {
+header .row {
+  margin-right: 0;
+  margin-left: 0;
+}
+.album {
+  padding: 2em;
+}
+[class^="col"] {
   padding: 0;
 }
-
+[class^="row"] {
+  margin: 0;
+}
+.landing h5 {
+  text-transform: uppercase;
+}
 .point {
   background:linear-gradient(#4f4f4f,white 154%);
   padding: 2rem;
+}
+.card-img-overlay {
+  background: #8080803d;
+}
+.card-img-overlay:hover {
+  background: rgba(25, 25, 25, .5);
 }
